src/assets/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*NOTE: try to fix tailwind backdrop-blur style after building*/
@layer base {
  *,
  ::before,
  ::after {
    --tw-backdrop-blur: ;
    --tw-backdrop-brightness: ;
    --tw-backdrop-contrast: ;
    --tw-backdrop-grayscale: ;
    --tw-backdrop-hue-rotate: ;
    --tw-backdrop-invert: ;
    --tw-backdrop-opacity: ;
    --tw-backdrop-saturate: ;
    --tw-backdrop-sepia: ;
  }
}

